make react-tabs work

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "react-tabs": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
